refactor: update package configuration and enhance IVRichTextEditor with mention and video features
- Renamed package from @interval/server to @trustfolio/interval-server and updated description.
- Added .npmrc to .gitignore.
- Enhanced IVRichTextEditor to support mentions and YouTube video embedding.
- Updated dependencies for @tiptap extensions and added new styles for suggestion lists.
- Modified CalendarPopover to use a typed Flatpickr component.
- Adjusted package.json scripts and dependencies for improved functionality.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@interval/server",
-  "description": "Interval Server is the central server for Interval apps",
+  "name": "@trustfolio/interval-server",
+  "description": "Fork of Interval Server",
   "version": "1.0.1",
   "license": "MIT",
   "engines": {
@@ -40,16 +40,13 @@
     "test:dev": "nodemon --watch test --exec \"playwright test\" -e ts",
     "test:start": "NODE_ENV=test start-server-and-test start:proxy http://localhost:3000/health-check/app test",
     "test:start:all": "NODE_ENV=test start-server-and-test start:proxy http://localhost:3000/health-check/app test:all",
-    "postinstall": "yarn prisma generate"
+    "postinstall": "yarn prisma generate && cd node_modules/@interval/sdk && yarn install && yarn build"
   },
   "dependencies": {
-    "handlebars": "^4.7.7",
-    "express": "^4.18.2",
     "@aws-sdk/client-s3": "^3.109.0",
     "@aws-sdk/s3-request-presigner": "^3.109.0",
-    "@interval/sdk": "2.0.0",
+    "@interval/sdk": "github:trustfolio/interval-sdk#main",
     "@prisma/client": "^5.3.0",
-    "prisma": "^5.3.0",
     "@prisma/generator-helper": "^5.3.0",
     "@trpc/client": "^9.16.0",
     "@trpc/react": "^9.16.0",
@@ -58,17 +55,21 @@
     "commander": "^11.1.0",
     "cross-fetch": "^3.1.5",
     "devalue": "^2.0.1",
+    "dotenv": "^16.3.1",
     "ee-ts": "^1.0.2",
     "email-templates": "^8.0.8",
     "evt": "^2.4.10",
+    "express": "^4.18.2",
     "generate-password": "^1.7.0",
     "glob": "^8.0.3",
+    "handlebars": "^4.7.7",
     "iron-session": "^6.0.5",
     "loglevel": "^1.8.1",
     "luxon": "^3.0.4",
     "node-cron": "^3.0.1",
     "postmark": "^3.0.14",
     "preview-email": "^3.0.6",
+    "prisma": "^5.3.0",
     "request-ip": "^3.3.0",
     "sanitize-html": "^2.11.0",
     "superjson": "^1.7.4",
@@ -79,8 +80,7 @@
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "ws": "^8.4.1",
-    "zod": "^3.13.3",
-    "dotenv": "^16.3.1"
+    "zod": "^3.13.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -107,14 +107,21 @@
     "@svgr/cli": "^6.3.1",
     "@tailwindcss/typography": "^0.5.0",
     "@tanstack/react-virtual": "^3.0.0-beta.18",
-    "@tiptap/extension-image": "^2.0.0-beta.199",
-    "@tiptap/extension-link": "^2.0.0-beta.199",
-    "@tiptap/extension-placeholder": "^2.0.0-beta.199",
-    "@tiptap/extension-text-align": "^2.0.0-beta.199",
-    "@tiptap/extension-underline": "^2.0.0-beta.199",
-    "@tiptap/pm": "^2.1.12",
-    "@tiptap/react": "^2.0.0-beta.199",
-    "@tiptap/starter-kit": "^2.0.0-beta.199",
+    "@tiptap/extension-image": "^2.11.5",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/extension-mention": "^2.11.5",
+    "@tiptap/extension-placeholder": "^2.11.5",
+    "@tiptap/extension-table": "^2.11.5",
+    "@tiptap/extension-table-cell": "^2.11.5",
+    "@tiptap/extension-table-header": "^2.11.5",
+    "@tiptap/extension-table-row": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.11.5",
+    "@tiptap/extension-underline": "^2.11.5",
+    "@tiptap/extension-youtube": "^2.11.5",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "@tiptap/suggestion": "^2.11.5",
     "@types/archiver": "^5.3.1",
     "@types/downloadjs": "^1.4.3",
     "@types/email-templates": "^10.0.1",
@@ -175,6 +182,7 @@
     "react-loading-skeleton": "^3.1.0",
     "react-markdown": "^8.0.0",
     "react-query": "^3.27.0",
+    "react-router-dom": "6.3.x",
     "react-scroll-sync": "^0.11.0",
     "react-select": "^5.2.2",
     "react-transition-group": "^4.4.2",
@@ -187,6 +195,7 @@
     "storybook": "^7.0.0-beta.53",
     "tailwindcss": "^3.0.12",
     "tailwindcss-text-fill": "^0.2.0",
+    "tippy.js": "^6.3.7",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.8",
@@ -194,12 +203,12 @@
     "typescript": "^4.8.4",
     "use-debounce": "^8.0.4",
     "vite": "^3.2.0",
-    "vite-plugin-checker": "^0.6.2",
+    "vite-plugin-checker": "^0.9.1",
     "vite-tsconfig-paths": "^4.0.5",
-    "xlsx": "^0.18.5",
-    "react-router-dom": "6.3.x"
+    "xlsx": "^0.18.5"
   },
   "resolutions": {
     "ts-node": "^10.9.1"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
