feat: enhance Dockerfile and scripts for environment variable support
- Updated Dockerfile to accept VITE_ environment variables as build arguments for HASURA_API_URL and MARKETPLACE_URL.
- Created a new script for local Docker builds that loads environment variables from .env files.
- Modified existing Docker build scripts to include new build arguments for improved configuration.
- Updated README.md to reflect changes in environment variable naming for better clarity.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "NODE_ENV=production ./dist/src/entry.js",
     "dev": "NODE_ENV=development nodemon --watch src --exec \"yarn build && chmod +x ./dist/src/entry.js && yarn start start\" -e ts",
     "docker": "./scripts/docker-build.sh",
-    "docker:local": "docker buildx build --platform=linux/arm64 -t trustfolio/interval-server:local . --build-arg PRISMA_SCHEMA_PATH=./prisma/schema.prisma --load",
+    "docker:local": "./scripts/docker-build-local.sh",
     "client:build": "vite build",
     "client:clean": "rm -r node_modules/.vite",
     "client:dev": "vite",
